feat: 2 rows 5 columns

--- a/index.html
+++ b/index.html
@@ -116,16 +116,29 @@
             <div class="flex-item2">Item2</div>
             <div class="flex-item3">Item3</div>
         </div>-->
-        <div class="grid-container">
+        <!--<div class="grid-container">
             <div class="grid-item1">1 4</div>
             <div class="grid-item">2</div>
             <div class="grid-item">3</div>
-            <!--<div class="grid-item">4</div>-->
+            <div class="grid-item">4</div>
             <div class="grid-item">5</div>
             <div class="grid-item">6</div>
             <div class="grid-item">7</div>
             <div class="grid-item8">8 9</div>
-            <!--<div class="grid-item">9</div>-->
+            <div class="grid-item">9</div>
+        </div>-->
+
+        <div class="grid-template-container">
+            <div class="template-item1">1</div>
+            <div class="template-item2">2</div>
+            <div class="template-item3">3</div>
+            <div class="template-item4">4</div>
+            <div class="template-item5">5</div>
+            <div class="template-item6">6</div>
+            <div class="template-item7">7</div>
+            <div class="template-item8">8</div>
+            <div class="template-item9">9</div>
+            <div class="template-item10">10</div>
         </div>
     </main>
 
