--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <header class="main-header">
         <nav class="navbar">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#" class="btn">Home</a></li>
+                <li><a href="#" class="btn">Blog</a></li>
+                <li><a href="#" class="btn">About</a></li>
+                <li ><a href="#" class="btn contact-btn">Contact</a></li>
             </ul>
         </nav>
     </header>
