--- a/index.html
+++ b/index.html
@@ -20,5 +20,14 @@
         </nav>
     </header>
 
+    <main>
+        <div class="wrapper">
+            <div class="container">
+                <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, provident deleniti culpa voluptas cumque et fuga neque incidunt quia repudiandae ab id reiciendis magni sunt?</div>
+                <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ipsam laborum porro veritatis quo corporis, incidunt quisquam qui voluptates adipisci dicta reprehenderit nobis tempore iste quod accusamus, minus rerum officia?</div>
+            </div>
+        </div>
+    </main>
+
 </body>
 </html>
