feat: media query

--- a/old/old_index.html
+++ b/old/old_index.html
@@ -4,21 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="old_style.css">
     <title>Document</title>
 </head>
 
 <body>
-    <div class="fullSize"></div>
-    <!--<header>
-        <nav>
-            <ul>
+    <header>
+        <nav class="navbar">
+            <ul class="nav_menu">
                 <li><a href="#">Nav</a></li>
                 <li><a href="#">Bar</a></li>
                 <li><a href="#">Yes</a></li>
             </ul>
         </nav>
-    </header>-->
+    </header>
 
     
     <main>
