feat: dark mode

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header class="main-header">
+    <header class="main-header-dark">
         <nav class="navbar">
             <ul>
                 <li><a href="#" class="btn">Home</a></li>
