--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 
@@ -27,6 +27,19 @@
                 <div class="card-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ipsam laborum porro veritatis quo corporis, incidunt quisquam qui voluptates adipisci dicta reprehenderit nobis tempore iste quod accusamus, minus rerum officia?</div>
             </div>
         </div>
+        <div class="boxes">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="buttons">
+            <button class="button-primary">Bottone 1</button>
+            <button class="button-secondary">Bottone 2</button>
+            <button class="button-third">Bottone 2</button>
+            <button class="button-fourth">Bottone 2</button>
+            <button class="button-fifth">Bottone 2</button>
+        </div>
+
     </main>
 
 </body>
