--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <p id="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 
     <script src="./index.js"></script>
 </body>
