--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <p id="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <p id="innerT"></p>
 
     <script src="./index.js"></script>
 </body>
