--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 <body>
     <p id="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     <p id="innerT"></p>
+    
+    <form id="form">
+        <label for="">Nome: </label>
+        <input type="text" name="nome">
+
+        <label for="">Cognome: </label>
+        <input type="text" name="cognome">
+
+        <button id ="form-btn" type="submit">Invia</button>
+    </form>
 
     <script src="./index.js"></script>
 </body>
