--- a/tailwind.html
+++ b/tailwind.html
@@ -4,11 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <style type="text/tailwindcss">
+        @layer components {
+            .divider {
+                @apply w-full my-6 h-[1px] bg-gray-500
+            }
+        }
+    </style>
     <title>Document</title>
 </head>
 <body>
     <div class="p-4">
+        <h1 class="bg-gradient-to-r from-blue-500 via-green-500 to-red-500 inline-block text-transparent bg-clip-text p-4 text-xl">HELLO WORLD!</h1>
+        <br>
         <p class="bg-blue-300 text-black font-bold inline-block">Testo di prova delle classi</p>
+    </div>
+    <div class="divider"></div>
+    <div class="p-4">
+        <ul class="bg-yellow-300 inline-block p-4">
+            <li><a href="#" class="text-blue-800">Menu 1</a></li>
+            <li><a href="#" class="text-blue-500">Menu 2</a></li>
+            <li><a href="#" class="text-blue-300">Menu 3</a></li>
+        </ul>
     </div>
 </body>
 </html>
