feat: tailwind.config

--- a/tailwind.html
+++ b/tailwind.html
@@ -22,6 +22,16 @@
                 },
             },
         };
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        primary: '#41463D',
+                    },
+                },
+            },
+        }
+
     </script>
     <title>Document</title>
 </head>
