--- a/tailwind.html
+++ b/tailwind.html
@@ -19,13 +19,17 @@
                 extend: {
                     colors: {
                         primary: '#41463D',
+                        secondary: '#f97316',
                     },
                     spacing: {
                         '13': '3.25rem',
                         '15': '3.75rem',
                         '128': '32rem',
                         '144': '36rem',
-                    }
+                    },
+                    fontSize: {
+                        'xxl': '2.5rem',
+                    },
                 },
                 container: {
                     center: true,
@@ -65,6 +69,12 @@
     <div>
         <p class="p-13">Il padding di questo di questo paragrafo è stato impostato usando uno spacing modificato nella
             configurazione di tailwind</p>
+    </div>
+
+    <div class="divider"></div>
+
+    <div class="p-4">
+        <p class="text-xxl text-secondary">Utilizzo del tema personalizzato</p>
     </div>
 
 </body>
