feat: colori di testo

--- a/tailwind.html
+++ b/tailwind.html
@@ -27,6 +27,7 @@
                         highlight: '#fbbf24', // Giallo vivace
                         dark: '#111827', // Grigio scuro
                         light: '#f3f4f6', // Grigio chiaro
+                        darkBlue: '#1e3a8a',   // Blu navy scuro
                     },
                     spacing: {
                         '13': '3.25rem',
@@ -96,17 +97,20 @@
 
     <div class="divider"></div>
 
-    <div class="flex justify-center align-center container" style="width: 300px;">
+    <div class="flex justify-center align-center container p-4" style="width: 300px;">
         <div class="flex flex-col justify-center align-center bg-secondary border border-double border-dark">
             <div class="flex flex-col justify-center align-center">
-                <h1 class="text-center">Titolo</h1>
+                <h1 class="text-center text-highlight">Titolo</h1>
                 <img src="https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0?ixid=M3w0NjA3MXwwfDF8c2VhcmNofDJ8fGZvcmVzdHxlbnwwfHx8fDE2OTU4NDg1NTN8&ixlib=rb-4.0.3&w=600&q=80" alt="Immagine della foresta da Unsplash">
             </div>
             <div class="">
-                <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, deserunt!</p>
+                <p class="text-center text-accent">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, deserunt!</p>
+                <a href="#" class="text-darkBlue">Link</a>
             </div>
         </div>
     </div>
+
+    <div class="divider"></div>
 
 </body>
 
