feat: darkMode -> 'media'

--- a/tailwind.html
+++ b/tailwind.html
@@ -18,6 +18,7 @@
     <script>
 
         tailwind.config = {
+            darkMode: 'media',
             theme: {
                 extend: {
                     colors: {
@@ -51,7 +52,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-100">
     <div class="p-4">
         <h1
             class="bg-gradient-to-r from-blue-500 via-green-500 to-red-500 inline-block text-transparent bg-clip-text p-4 text-xl">
