feat: toggle dark mode

--- a/tailwind.html
+++ b/tailwind.html
@@ -52,7 +52,7 @@
     <title>Document</title>
 </head>
 
-<body class="dark dark:bg-gray-900 dark:text-gray-100">
+<body class="dark">
 
     <div class="p-4 dark:bg-gray-800 dark:text-white">
         <h1
@@ -118,6 +118,12 @@
 
     <div class="divider"></div>
 
+    <div class="p-4 dark:bg-gray-800 dark:text-white">
+        <button id="toggleDarkMode" class="btn dark:bg-gray-600 text-white">Dark Mode: <span id="darkModeStatus">Inactive</span></button>
+    </div>
+
+
+    <script src="./tailwind.js"></script>
 </body>
 
 </html>
