feat: focus and active input

--- a/tailwind.html
+++ b/tailwind.html
@@ -131,6 +131,20 @@
         <button class="btn hover:bg-highlight hover:text-accent">3</button>
     </div>
 
+    <div class="divider"></div>
+
+    <div class="p-4">
+        <div class="p-2">
+            <label for="focus">Focus: </label>
+            <input class="focus:bg-dark border border-gray-500 rounded text-white" name="focus">
+        </div>
+        <div class="p-2">
+            <label for="active">Active: </label>
+            <input class="active:bg-dark border border-gray-500 rounded" name="focus">
+        </div>
+
+    </div>
+
 
     <script src="./tailwind.js"></script>
 </body>
