--- a/tailwind.html
+++ b/tailwind.html
@@ -143,6 +143,14 @@
             <input class="active:bg-dark border border-gray-500 rounded" name="focus">
         </div>
 
+    <div class="divider"></div>
+
+    <div class="p-4">
+        <form>
+            <label for="disabled">Disabled: </label>
+            <input name="disabled" class="border border-gray-500 rounded disabled:bg-gray-200" disabled>
+            <button type="submit" class=" btn disabled:text-gray-400" disabled >Invia</button>
+        </form>
     </div>
 
 
