--- a/tailwind.html
+++ b/tailwind.html
@@ -5,18 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- componenti custom -->
     <style type="text/tailwindcss">
-        @layer components {
-            .divider {
-                @apply w-full my-6 h-[1px] bg-gray-500
+        @layer components { 
+            .divider { 
+                @apply w-full my-6 h-[1px] bg-gray-500 
             }
             .btn {
                 @apply border bg-gray-200 m-2 active:border-gray-500 rounded text-xl p-3
         } 
         }
     </style>
-    <script>
 
+    <script>
         tailwind.config = {
             darkMode: 'class',
             theme: {
@@ -107,10 +109,12 @@
         <div class="flex flex-col justify-center align-center bg-secondary border border-double border-dark">
             <div class="flex flex-col justify-center align-center">
                 <h1 class="text-center text-highlight">Titolo</h1>
-                <img src="https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0?ixid=M3w0NjA3MXwwfDF8c2VhcmNofDJ8fGZvcmVzdHxlbnwwfHx8fDE2OTU4NDg1NTN8&ixlib=rb-4.0.3&w=600&q=80" alt="Immagine della foresta da Unsplash">
+                <img src="https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0?ixid=M3w0NjA3MXwwfDF8c2VhcmNofDJ8fGZvcmVzdHxlbnwwfHx8fDE2OTU4NDg1NTN8&ixlib=rb-4.0.3&w=600&q=80"
+                    alt="Immagine della foresta da Unsplash">
             </div>
             <div class="">
-                <p class="text-center text-accent">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, deserunt!</p>
+                <p class="text-center text-accent">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia,
+                    deserunt!</p>
                 <a href="#" class="text-darkBlue">Link</a>
             </div>
         </div>
@@ -119,7 +123,8 @@
     <div class="divider"></div>
 
     <div class="p-4 dark:bg-gray-800 dark:text-white">
-        <button id="toggleDarkMode" class="btn dark:bg-gray-600 text-white">Dark Mode: <span id="darkModeStatus">Inactive</span></button>
+        <button id="toggleDarkMode" class="btn dark:bg-gray-600 text-white">Dark Mode: <span
+                id="darkModeStatus">Inactive</span></button>
     </div>
 
     <div class="divider"></div>
@@ -143,18 +148,18 @@
             <input class="active:bg-dark border border-gray-500 rounded" name="focus">
         </div>
 
-    <div class="divider"></div>
+        <div class="divider"></div>
 
-    <div class="p-4">
-        <form>
-            <label for="disabled">Disabled: </label>
-            <input name="disabled" class="border border-gray-500 rounded disabled:bg-gray-200" disabled>
-            <button type="submit" class=" btn disabled:text-gray-400" disabled >Invia</button>
-        </form>
-    </div>
+        <div class="p-4">
+            <form>
+                <label for="disabled">Disabled: </label>
+                <input name="disabled" class="border border-gray-500 rounded disabled:bg-gray-200" disabled>
+                <button type="submit" class=" btn disabled:text-gray-400" disabled>Invia</button>
+            </form>
+        </div>
 
 
-    <script src="./tailwind.js"></script>
+        <script src="./tailwind.js"></script>
 </body>
 
 </html>
