feat: stili riutilizzabili

--- a/tailwind.html
+++ b/tailwind.html
@@ -14,7 +14,7 @@
             }
             .btn {
                 @apply border bg-gray-200 m-2 active:border-gray-500 rounded text-xl p-3
-        } 
+            } 
         }
     </style>
 
@@ -46,6 +46,14 @@
                     center: true,
                     margin: '2px',
                     padding: '2rem',
+                },
+                borderRadius: {
+                    'card': '0.75rem',
+                    'btn': '0.5rem',
+                },
+                boxShadow: {
+                    'card': '0 4px 6px rgba(0, 0, 0, 0.1)', 
+                    'btn': '0 2px 4px rgba(0, 0, 0, 0.2)',
                 },
             }
         }
