--- a/tailwind.html
+++ b/tailwind.html
@@ -15,6 +15,9 @@
             .btn {
                 @apply border bg-gray-200 m-2 active:border-gray-500 rounded text-xl p-3
             } 
+            .btn-highlight {
+                @apply btn bg-highlight
+            }
         }
     </style>
 
@@ -41,21 +44,22 @@
                     fontSize: {
                         'xxl': '2.5rem',
                     },
+                    borderRadius: {
+                        'card': '0.75rem',
+                        'btn': '0.5rem',
+                    },
+                    boxShadow: {
+                        'card': '0 4px 6px rgba(0, 0, 0, 0.1)',
+                        'btn': '0 2px 4px rgba(0, 0, 0, 0.2)',
+                    },
                 },
                 container: {
                     center: true,
                     margin: '2px',
                     padding: '2rem',
                 },
-                borderRadius: {
-                    'card': '0.75rem',
-                    'btn': '0.5rem',
-                },
-                boxShadow: {
-                    'card': '0 4px 6px rgba(0, 0, 0, 0.1)', 
-                    'btn': '0 2px 4px rgba(0, 0, 0, 0.2)',
-                },
-            }
+
+            },
         }
 
     </script>
@@ -164,6 +168,13 @@
                 <input name="disabled" class="border border-gray-500 rounded disabled:bg-gray-200" disabled>
                 <button type="submit" class=" btn disabled:text-gray-400" disabled>Invia</button>
             </form>
+        </div>
+
+        <div class="divider"></div>
+
+        <div class="p-4">
+            <button class="btn">Bottone base</button>
+            <button class="btn btn-highlight">Bottone speciale</button>
         </div>
 
 
