feat: tre colonne affiancate

--- a/tailwind.html
+++ b/tailwind.html
@@ -177,6 +177,13 @@
             <button class="btn btn-highlight">Bottone speciale</button>
         </div>
 
+        <div class="divider"></div>
+
+        <div class="flex justify-between align-center">
+            <div class="p-2 m-2 border grow text-center">1</div>
+            <div class="p-2 m-2 border grow text-center">2</div>
+            <div class="p-2 m-2 border grow text-center">3</div>
+        </div>
 
         <script src="./tailwind.js"></script>
 </body>
