feat: justify-center, align-center

--- a/tailwind.html
+++ b/tailwind.html
@@ -185,6 +185,12 @@
             <div class="p-2 m-2 border grow text-center">3</div>
         </div>
 
+        <div class="divider"></div>
+
+        <div class="flex justify-center align-center">
+            <div class="p-2 m-2 border grow text-center">Contenuto</div>
+        </div>
+
         <script src="./tailwind.js"></script>
 </body>
 
