--- a/tailwind.html
+++ b/tailwind.html
@@ -191,6 +191,17 @@
             <div class="p-2 m-2 border grow text-center">Contenuto</div>
         </div>
 
+        <div class="divider"></div>
+
+        <div class="flex flex-wrap justify-center align-center">
+            <div class="p-2 m-2 border grow text-center basis-1/4">1</div>
+            <div class="p-2 m-2 border grow text-center basis-1/4">2</div>
+            <div class="p-2 m-2 border grow text-center basis-1/4">3</div>
+            <div class="p-2 m-2 border grow text-center basis-1/4">4</div>
+            <div class="p-2 m-2 border grow text-center basis-1/4">5</div>
+            <div class="p-2 m-2 border grow text-center basis-1/4">6</div>
+        </div>
+
         <script src="./tailwind.js"></script>
 </body>
 
