--- a/tailwind.html
+++ b/tailwind.html
@@ -202,6 +202,12 @@
             <div class="p-2 m-2 border grow text-center basis-1/4">6</div>
         </div>
 
+        <div class="divider"></div>
+
+        <div class="p-4 sm:bg-blue-300 md:text-blue-800 md:bg-dark md:text-white lg:bg-highlight xl:bg-accent 2xl:bg-secondary">
+            Div responsivo
+        </div>
+
         <script src="./tailwind.js"></script>
 </body>
 
