--- a/tailwind.html
+++ b/tailwind.html
@@ -204,8 +204,38 @@
 
         <div class="divider"></div>
 
-        <div class="p-4 sm:bg-blue-300 md:text-blue-800 md:bg-dark md:text-white lg:bg-highlight xl:bg-accent 2xl:bg-secondary">
+        <div
+            class="p-4 sm:bg-blue-300 md:text-blue-800 md:bg-dark md:text-white lg:bg-highlight xl:bg-accent 2xl:bg-secondary">
             Div responsivo
+        </div>
+
+        <div class="divider"></div>
+
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4">
+            <div class="p-2 m-2 border text-center basis-1/4">
+                <h2 class="text-xl font-bold">Elemento 1</h2>
+                <p>Contenuto dell'elemento 1.</p>
+            </div>
+            <div class="p-2 m-2 border text-center basis-1/4">
+                <h2 class="text-xl font-bold">Elemento 2</h2>
+                <p>Contenuto dell'elemento 2.</p>
+            </div>
+            <div class="p-2 m-2 border text-center basis-1/4">
+                <h2 class="text-xl font-bold">Elemento 3</h2>
+                <p>Contenuto dell'elemento 3.</p>
+            </div>
+            <div class="p-2 m-2 border text-center basis-1/4">
+                <h2 class="text-xl font-bold">Elemento 4</h2>
+                <p>Contenuto dell'elemento 4.</p>
+            </div>
+            <div class="p-2 m-2 border text-center basis-1/4">
+                <h2 class="text-xl font-bold">Elemento 5</h2>
+                <p>Contenuto dell'elemento 5.</p>
+            </div>
+            <div class="p-2 m-2 border text-center basis-1/4">
+                <h2 class="text-xl font-bold">Elemento 6</h2>
+                <p>Contenuto dell'elemento 6.</p>
+            </div>
         </div>
 
         <script src="./tailwind.js"></script>
