--- a/tailwind.html
+++ b/tailwind.html
@@ -238,6 +238,21 @@
             </div>
         </div>
 
+        <div class="divider"></div>
+
+        <p class="p-4 block md:hidden">
+            Questo paragrafo è visibile solo su schermi piccoli (fino a 768px).
+        </p>
+
+        <p class="p-4 hidden md:block lg:hidden">
+            Questo paragrafo è nascosto su schermi piccoli, ma visibile su schermi medi (768px) e fino a grandi
+            (1024px).
+        </p>
+
+        <p class="p-4 hidden lg:block">
+            Questo paragrafo è visibile solo su schermi grandi (da 1024px in poi).
+        </p>
+
         <script src="./tailwind.js"></script>
 </body>
 
